Move the topic-activity in the explore-page scope + fix some spacing

--- a/app/assets/sass/explore.scss
+++ b/app/assets/sass/explore.scss
@@ -648,7 +648,57 @@ li.govuk-tabs__list-item {
     }
   }
 
-  //==== end explore page section. Add thinge here
+  .xpl-topic-activity {
+    &-frame {
+      position: relative;
+      margin-bottom: 20px;
+      display: inline-block;
+      width: 100%;
+      z-index: 2;
+
+      &::after {
+        content: '';
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        border-right: 2px solid govuk-colour('blue');
+        border-bottom: 2px solid govuk-colour('blue');
+        left: 3px;
+        top: 3px;
+        z-index: -1;
+      }
+      h2 {
+        margin: 0 0 15px 0;
+        font-size: 19px;
+        color: $govuk-link-colour;
+      }
+      p {
+        font-size: 16px;
+      }
+    }
+    &-inner {
+      min-height: 230px;
+      padding: 30px;
+      background: govuk-colour("white");
+      border: 1px solid $govuk-border-colour;
+      z-index: 9;
+      &:hover {
+        background: #f3f2f1;
+        h2 {
+          color: $link-hover-colour;
+        }
+      }
+
+    }
+    &-footer {
+      position: absolute;
+      bottom: 0;
+      color: #555;
+    }
+  }
+
+
+  //==== end explore page section. Add things here
 
 }
 
@@ -809,55 +859,6 @@ li.govuk-tabs__list-item {
 }
 
 
-.xpl-topic-activity {
-  &-frame {
-    position: relative;
-    margin-bottom: 20px;
-    display: inline-block;
-    width: 100%;
-    z-index: 2;
-
-    &::after {
-      content: '';
-      position: absolute;
-      width: 100%;
-      height: 100%;
-      border-right: 2px solid govuk-colour('blue');
-      border-bottom: 2px solid govuk-colour('blue');
-      left: 3px;
-      top: 3px;
-      z-index: -1;
-    }
-    h2 {
-      margin: 0;
-      font-size: 20px;
-      margin-bottom: 15px;
-      color: $govuk-link-colour;
-    }
-    p {
-      font-size: 16px;
-    }
-  }
-  &-inner {
-    min-height: 230px;
-    padding: 30px;
-    background: govuk-colour("white");
-    border: 1px solid $govuk-border-colour;
-    z-index: 9;
-    &:hover {
-      background: #f3f2f1;
-      h2 {
-        color: $link-hover-colour;
-      }
-    }
-
-  }
-  &-footer {
-    position: absolute;
-    bottom: 0;
-    color: #555;
-  }
-}
 
 
 .xpl-organisation {
